@@ -1069,6 +1069,8 @@ EPSON Stylus Scan 2000
 EPSON Stylus Scan 2500
 EPSON Stylus CX-3100
 EPSON Stylus CX-3200
+EPSON Stylus CX-3600
+EPSON Stylus CX-3650
 EPSON Stylus CX-4600 (Experimental)
 EPSON Stylus CX-5100
 EPSON Stylus CX-5200
